--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,6 +15,7 @@ h1 {
 }
 
 #member-logo {
+  min-height: 85px;
   max-height: 150px;
   max-width: 300px;
 }
@@ -24,6 +25,6 @@ h1 {
 }
 
 .container {
-    margin-top: 50px;
-    max-width: 500px;
+  margin-top: 50px;
+  max-width: 500px;
 }
