--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,17 +1,25 @@
-body {
-    background-color: #43c07f !important;
+.icea-panel {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
 }
 
-h1 {
-  font-size: 16px;
-  font-weight: bold;
+.icea-panel h3 {
+  font-size: 1.2em;
+  margin: 0;
 }
 
-.panel-inner {
+.icea-panel p {
+  margin-top: 15px;
+}
+
+.border-box {
   border: 1px solid #ccc;
-  border-radius: 5px;
-  margin: 5px;
+  margin: 20px;
   padding: 10px;
+}
+
+.data {
+  font-weight: bold;
 }
 
 #member-logo {
