--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,7 +50,6 @@
   height: 125px;
   max-height: 125px;
   padding: 20px 0;
-  color: #F8F8F8;
 }
 
 #icea-data > h2 {
@@ -63,7 +62,6 @@
 }
 
 #icea-member {
-  color: #fff;
   margin: 15px 0 0 0;
 }
 
@@ -81,6 +79,7 @@
 .carousel-button-left, .carousel-button-right {
   color: #72C4C0;
   margin-top: 50px;
+  display: none;
 }
 
 .carousel-button-left:hover, .carousel-button-right:hover {
